[gd_scene load_steps=5 format=3 uid="uid://bsfxq1og8vrv1"]

[ext_resource type="Texture2D" uid="uid://x8w2uhbxlgpd" path="res://my-wordle-bg.png" id="1_hqgo7"]
[ext_resource type="Script" uid="uid://cj1cfbrwkixr5" path="res://select_wordle.gd" id="1_xl7w1"]
[ext_resource type="Theme" uid="uid://dt7q57jxovxw2" path="res://my-theme.tres" id="2_xl7w1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g7vdp"]
texture = ExtResource("1_hqgo7")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0.497474, 0.497474, 0.497474, 0.960784)

[node name="SelectWordle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xl7w1")
script = ExtResource("1_xl7w1")

[node name="panel_bg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_g7vdp")

[node name="container" type="MarginContainer" parent="panel_bg"]
layout_mode = 1
offset_right = 231.0
offset_bottom = 112.0
theme_override_constants/margin_left = 56
theme_override_constants/margin_top = 56
theme_override_constants/margin_right = 56
theme_override_constants/margin_bottom = 56

[node name="vbox_container" type="VBoxContainer" parent="panel_bg/container"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2

[node name="btn_back" type="Button" parent="panel_bg/container/vbox_container"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_vertical = 7
theme = ExtResource("2_xl7w1")
text = "Back"

[node name="gc_area" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.194
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.287994
grow_horizontal = 2
grow_vertical = 0
columns = 6

[node name="confirmation_dialog" type="AcceptDialog" parent="."]
title = "Please Confirm"
initial_position = 1
size = Vector2i(300, 150)
ok_button_text = "Play"

[connection signal="pressed" from="panel_bg/container/vbox_container/btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="confirmed" from="confirmation_dialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="custom_action" from="confirmation_dialog" to="." method="_on_confirmation_dialog_custom_action"]
